# chicory-redline

./: .gitignore  CONTRIBUTING.md  README.md  cranelift_bridge.wasm  jffi-backport-plan.md  module-split-plan.md  native-compilation-plan.md  pom.xml
.github/workflows/: ci.yml  release.yml
api/: pom.xml
api/src/main/java/io/roastedroot/cranelift/api/: CraneliftInstance.java  CraneliftMachineFactoryProvider.java  CraneliftTarget.java  NativeCodeSerializer.java
api/src/main/java/io/roastedroot/redline/api/: Interruptable.java  NativeCodeSerializer.java  RedlineInstance.java  RedlineMachineFactoryProvider.java  RedlineTarget.java
bridge/: pom.xml
bridge/src/main/java-templates/io/roastedroot/cranelift/bridge/: WasmResource.java
build-time-compiler/: pom.xml
compiler/: pom.xml
compiler-maven-plugin/: pom.xml
cranelift4j/: pom.xml
cranelift4j/src/main/java/io/roastedroot/cranelift4j/: UniversalInstance.java
integration-tests/: pom.xml
integration-tests/src/it/toml2json/: invoker.properties  pom.xml
integration-tests/src/it/toml2json-universal/: pom.xml
jmh/: pom.xml  run.sh
redline/: pom.xml
redline/src/main/java/io/roastedroot/redline/: UniversalInstance.java
runner/: pom.xml
runner-jffi/: pom.xml
runner-jffi-tests/: pom.xml
runner-tests/: pom.xml
runner/src/test/resources/: shootout-heapsort.wasm  shootout-seqhash.wasm  shootout-switch.wasm
wasm/: toml2json.wasm
wasm-build/: Cargo.toml  Makefile
wasm-build/src/: lib.rs
wasm/toml2json/: Cargo.toml  build.sh
wasm/toml2json/src/: lib.rs
(+107 files in other folders)
